recursion.lessons.recursion.tree.Tree.scala.error
Tree:8: error: not found: value x
		x = getX();
                ^Tree:9: error: not found: value y
		y = getY();
                ^Tree:10: error: not found: value cap
		cap = getCap();
                ^Tree:13: error: not found: value x
		setX(x);
                     ^Tree:14: error: not found: value y
		setY(y);
                     ^Tree:15: error: not found: value cap
		setCap(cap);
                       ^