recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
	if (length == 0) {
		return;
	}
	else {
		avance(steps);
		x = getX();
		y = getY();
		cap = getCap();
		droite(angle);
		tree(steps, length-1, angle, shrink);
		setX(x);
		setY(y);
		setCap(cap);
		gauche(angle);
	}
}
